syntax = "proto3";

package pb;
option go_package = "../../order/pb";


message OrderedProduct {
  string id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  uint32 quantity = 5;
}


message Order {
  string id = 1;
  bytes createdAt = 2;
  string accountId = 3;
  double totalAmount = 4;
  repeated OrderedProduct orderedProducts = 5;
}


message OrderProduct {
  string productId = 1;
  uint32 quantity = 2;
}


message CreateOrderRequest {
  string accountId = 1;
  repeated OrderProduct orderProducts = 2;
}

message CreateOrderResponse {
  Order order = 1;

}


message GetOrdersForAccountRequest {
  string accountId = 1;

}


message GetOrdersForAccountResponse {
  repeated Order orders = 1;
}


service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse) {}
  rpc GetOrdersForAccount(GetOrdersForAccountRequest) returns (GetOrdersForAccountResponse) {}
}